app/styles/scss/login.scss
/* Login page styles */

.login-overlay {
	position: relative;
	text-align: center;
	top: 0;
	left: 0;
	right: 0;
	padding-bottom: 50px;
	min-height: 100vh;
	background: rgba(231, 245, 224, 0.58);
	-webkit-transition: all .4s cubic-bezier(0.175, 0.885, 0.335, 1.05);
	transition: all .4s cubic-bezier(0.175, 0.885, 0.335, 1.05);


	.logo {
		display: block;
		margin: 0 auto;
		position: relative;
		z-index: 1;
		text-transform: uppercase;
		color: #388e3c;
		font-size: 27px;
		letter-spacing: 1px;
		top: 15px;
		.smaller {
			font-size: 16px;
			letter-spacing: 5px;
			margin-left: -8px;
		}
	}
	.form-container {
	    position: relative;
	    z-index: 1;
	    top: 90px;
	    background: white;
	    width: 50%;
	    margin: 0 auto;
	    .icon {
	    	padding-top: 30px;
	    	.mdi {
	    		color: $primary;
	    		font-size: 110px;
	    	}
	    	.header {
	    		margin-top: 10px;
	    		font-size: 20px;
	    		text-transform: uppercase;
	    	}
	    }
	    .inputs {
	    	margin-top: 10px;
	    	.mdl-textfield {
	    		width: 75%;
	    		padding: 0;
	    	}
	    	.buttons {
	    		width: 75%;
	    		margin: 5px auto;
	    		md-checkbox {
	    			text-align: initial;
	    			float: left;
	    			display: inline-block;
	    		}
	    		.signup {
	    			float: right;
	    			margin-top: 15px;
	    			a {
	    				text-decoration: none;
	    				color: $primary;
	    			}
	    		}
				.link {
					padding-top: 10px;
					padding-bottom: 20px;
					.mdl-button {
						background: $primary;
						color: white;
						width: 25%;
						font-size: 15px;
					}
				}
	    	}
	    }
	}
}

h5.four {
	font-size: 50px;
}

div.not-found {
	font-size: 28px;
	padding-bottom: 50px;
}

.login-footer {
    position: absolute;
    left: 0;
    right: 0;
    display: flex;
    justify-content: space-between;
    bottom: 0;
    padding: 20px 8px;
    color: #9e9e9e;
    background-color: #424242;
    box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.1);
	.mdl-logo {
		color: #88878B;
	}
	.left-section {
		display: inline-block;
		order: 0;
	}
	.right-section {
		display: inline-block;
		order: 1;
	}
}




@media screen and (max-width: 990px) {
    .form-container {
        width: 75% !important;
    }
}

@media screen and (max-width: 490px) {
    .logo {
        top: 40px !important;
    }
    .form-container {
    	top: 60px !important;
    	width: 90% !important;
    	.mdl-textfield {
    		width: 85% !important;
    	}
    }
     .login-footer {
        text-decoration: center;
        padding-top: 7px;
        padding-bottom: 7px;
        .left-section, .right-section {
        	width: 100%;
        	display: block;
        }
    }
}

.max-content{
  height: max-content;
}

